--- a/app/views/weather/get_coordinates.html.erb
+++ b/app/views/weather/get_coordinates.html.erb
@@ -1,1 +1,20 @@
-<p> test </p>
+
+
+<div class="col-lg-3">
+</div>
+<div class="col-lg-6">
+  <h2>Enter Details</h2>
+  <%= form_tag get_weather_path do %>
+    <div class="form-group">
+	  <label for="city">City</label>
+	  <%= text_field_tag :city, nil, required: true, class: "form-control" %>
+	</div>
+	
+    <div class="form-group">
+	  <label for="country">Country</label>
+	  <%= text_field_tag :country, nil, required: true, class: "form-control" %>
+	</div>
+    <button type="submit" class="btn btn-large btn-primary">Get Weather</button>
+
+  <% end %>
+</div>
