--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top nav">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-		  <span>Weather API</span>
-		  </a>
+          <span><%= link_to "Weather API", get_coordinates_path, class: "home" %></span>
         </div>
       </div>
     </div>
